--- a/deploy/k8s/base/community/deployment.yaml
+++ b/deploy/k8s/base/community/deployment.yaml
@@ -15,6 +15,33 @@ spec:
       initContainers:
         - name: wait-for-postgres
           image: groundnuty/k8s-wait-for:v1.3
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 2
+            failureThreshold: 3
+          
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 3000
+            runAsNonRoot: true
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+          
+          resources:
+            requests:
+              cpu: "250m"       # Minimum CPU required (0.25 vCPU)
+              memory: "256Mi"   # Minimum memory required
+            limits:
+              cpu: "500m"       # Maximum CPU allowed (0.5 vCPU)
+              memory: "512Mi"   # Maximum memory allowed
+
           imagePullPolicy: Always
           args:
             - "service"
@@ -22,12 +49,66 @@ spec:
         - name: wait-for-mongo
           image: groundnuty/k8s-wait-for:v1.3
           imagePullPolicy: Always
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 2
+            failureThreshold: 3
+          
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 3000
+            runAsNonRoot: true
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+
+            resources:
+              requests:
+                cpu: "250m"       # Minimum CPU required (0.25 vCPU)
+                memory: "256Mi"   # Minimum memory required
+              limits:
+                cpu: "500m"       # Maximum CPU allowed (0.5 vCPU)
+                memory: "512Mi"   # Maximum memory allowed
+
           args:
             - "service"
             - "mongodb"
         - name: wait-for-java
           image: groundnuty/k8s-wait-for:v1.3
           imagePullPolicy: Always
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 2
+            failureThreshold: 3
+          
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 3000
+            runAsNonRoot: true
+            readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+          
+          resources:
+            requests:
+              cpu: "250m"       # Minimum CPU required (0.25 vCPU)
+              memory: "256Mi"   # Minimum memory required
+            limits:
+              cpu: "500m"       # Maximum CPU allowed (0.5 vCPU)
+              memory: "512Mi"   # Maximum memory allowed
+
           args:
             - "service"
             - "crapi-identity"
@@ -35,6 +116,33 @@ spec:
       - name: crapi-community
         image: crapi/crapi-community:v1
         imagePullPolicy: Always
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 15
+          timeoutSeconds: 2
+          failureThreshold: 3
+        
+        securityContext:
+          runAsUser: 1000
+          runAsGroup: 3000
+          runAsNonRoot: true
+          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
+        
+        resources:
+          requests:
+            cpu: "250m"       # Minimum CPU required (0.25 vCPU)
+            memory: "256Mi"   # Minimum memory required
+          limits:
+            cpu: "500m"       # Maximum CPU allowed (0.5 vCPU)
+            memory: "512Mi"   # Maximum memory allowed
+
         ports:
         - containerPort: 8087
         envFrom:
