--- a/deploy/k8s/base/community/deployment.yaml
+++ b/deploy/k8s/base/community/deployment.yaml
@@ -25,7 +25,7 @@ spec:
             failureThreshold: 3
           
           securityContext:
-            runAsUser: 1000
+            runAsUser: 10000
             runAsGroup: 3000
             runAsNonRoot: true
             readOnlyRootFilesystem: true
@@ -39,8 +39,8 @@ spec:
               cpu: "250m"       # Minimum CPU required (0.25 vCPU)
               memory: "256Mi"   # Minimum memory required
             limits:
-              cpu: "500m"       # Maximum CPU allowed (0.5 vCPU)
-              memory: "512Mi"   # Maximum memory allowed
+              cpu: "500m"       
+              memory: "512Mi"   
 
           imagePullPolicy: Always
           args:
@@ -59,7 +59,7 @@ spec:
             failureThreshold: 3
           
           securityContext:
-            runAsUser: 1000
+            runAsUser: 10000
             runAsGroup: 3000
             runAsNonRoot: true
             readOnlyRootFilesystem: true
@@ -73,8 +73,8 @@ spec:
                 cpu: "250m"       # Minimum CPU required (0.25 vCPU)
                 memory: "256Mi"   # Minimum memory required
               limits:
-                cpu: "500m"       # Maximum CPU allowed (0.5 vCPU)
-                memory: "512Mi"   # Maximum memory allowed
+                cpu: "500m"       
+                memory: "512Mi"  
 
           args:
             - "service"
@@ -92,7 +92,7 @@ spec:
             failureThreshold: 3
           
           securityContext:
-            runAsUser: 1000
+            runAsUser: 10000
             runAsGroup: 3000
             runAsNonRoot: true
             readOnlyRootFilesystem: true
@@ -106,8 +106,8 @@ spec:
               cpu: "250m"       # Minimum CPU required (0.25 vCPU)
               memory: "256Mi"   # Minimum memory required
             limits:
-              cpu: "500m"       # Maximum CPU allowed (0.5 vCPU)
-              memory: "512Mi"   # Maximum memory allowed
+              cpu: "500m"       
+              memory: "512Mi"   
 
           args:
             - "service"
@@ -126,7 +126,7 @@ spec:
           failureThreshold: 3
         
         securityContext:
-          runAsUser: 1000
+          runAsUser: 10000
           runAsGroup: 3000
           runAsNonRoot: true
           readOnlyRootFilesystem: true
@@ -140,9 +140,8 @@ spec:
             cpu: "250m"       # Minimum CPU required (0.25 vCPU)
             memory: "256Mi"   # Minimum memory required
           limits:
-            cpu: "500m"       # Maximum CPU allowed (0.5 vCPU)
-            memory: "512Mi"   # Maximum memory allowed
-
+            cpu: "500m"       
+            memory: "512Mi"   
         ports:
         - containerPort: 8087
         envFrom:
