--- a/deploy/k8s/base/rbac/rolebinding.yaml
+++ b/deploy/k8s/base/rbac/rolebinding.yaml
@@ -5,7 +5,7 @@ metadata:
   name: waitfor-grant
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: serviceaccount
   namespace: crapi
   apiGroup: ""
 roleRef:
